--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,18 @@
 @import "tailwindcss";
 
 :root {
+  --bg: #ffffff;
+  --text: #111827;
+  --primary: #3b82f6;
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #242424;
 }
+
+.dark {
+  --bg: #0f172a;
+  --text: #e5e7eb;
+}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -12,9 +21,9 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
+    --background: #d9d9d9;
     --foreground: #ededed;
   }
 }
@@ -24,3 +33,5 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
