--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,12 @@
 @import "tailwindcss";
 
-:root {
-  --bg: #ffffff;
+@media (prefers-color-scheme: light) {
+  :root {
+  --bg: bg-gray-50;
   --text: #111827;
   --primary: #3b82f6;
-  --background: #ffffff;
   --foreground: #242424;
+  }
 }
 
 .dark {
@@ -14,22 +15,8 @@
 }
 
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --background: #d9d9d9;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
+  background: var(--bg);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
